--- a/style.css
+++ b/style.css
@@ -1,80 +1,109 @@
-*{
+* {
   margin: 0;
   padding: 0;
   font-family: 'Courier New', Courier, monospace;
   box-sizing: border-box;
- 
 }
 
-.dashboardBody{
-  background: rgb(25, 159, 212);
+.dashboardBody {
+  background: url('./dashboardBody.jpg') center;
   height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
 }
-.dashboardModal{
+
+.dashboardModal {
+
+  height: 90%;
+  background: #c0b8b8;
+  width: 90%;
+  border-radius: 15px;
+  display: flex;
+}
+
+.mainBoard {
+  width: 100%;
+
+}
+.displayFlex{
+  display: flex;
+}
+.userProfile {
+  width: 25%;
+  border-radius: 0 20px 20px 0px;
+  background: url('./userProfileBackground.jpg');
+  display: flex;
+  flex-direction: column;
+  font-size: 1.3rem;
+  padding: 10px 5px;
+}
+
+.mainBoardTop {
+  height: 15%;
+  border-radius: 25px 0 0 0;
+  background: rgb(199, 187, 187)
+}
+
+.userImage {
+  margin: 30px auto;
   
-    height: 90%;
-    background: #f3eded;
-    width: 90%;
-    border-radius: 15px;
-    display: flex;
-  }
+}
 
-  .mainBoard{
-    width: 75%;
+.userProfile .userImage img {
+  width: 100px;
+  height: 100px;
+  border-radius: 100%;
+  border: 7px solid #fff;
+}
 
-  }
-  .userProfile{
-    width: 25%;
-    border-radius: 0 20px 20px 0px;
-    background: rgb(199, 187, 187);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 90px 0 0 0;
-   font-size: 1.3rem;
+.icons{
+ font-size: 2.5rem;
+  cursor: pointer;
+  margin: 0 auto;
+}
+.displayNone{
+  display: none;
+}
+.displayTrue{
+  display: flex;
+}
 
-  }
-  .mainBoardTop{
-    height: 15%;
-    border-radius: 25px 0 0 0;
-    background:  rgb(199, 187, 187)
-  }
-  .userImage{
-    margin: 0 0 40px 0;
-  }
-  .userProfile .userImage img{
-    width: 100px;
-    height: 100px;
-    border-radius: 100%;
-    border: 7px solid #fff;
-    
-  }
-li{
+li {
   list-style: none;
   line-height: 1.5;
 }
-a{
+
+a {
   text-decoration: none;
 }
-.topWrapper{
+a:hover{
+  background: rgb(200, 240, 255);
+  padding: 8px 20px;
+  border-radius: 10px;
+}
+
+.topWrapper {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
   height: 100%;
+  padding: 0 20px;
+  background: url('./userProfileBackground.jpg');
 }
-.messaging{
+
+.messaging {
   font-size: 1.6rem;
 }
-.btn button{
-  padding: 10px;
-  
+
+.btn{
+  padding: 8px;
+  border-radius: 10px;
   background: rgb(25, 159, 212);
-  font-size: 1.5rem;
+  font-size: 1.3rem;
   border: 1px solid rgb(25, 159, 212);
   color: #fff;
   cursor: pointer;
+  margin: 0 10px;
 
 }
