--- a/style.css
+++ b/style.css
@@ -4,29 +4,24 @@
   font-family: 'Courier New', Courier, monospace;
   box-sizing: border-box;
 }
-
 .dashboardBody {
-  background: url('./dashboardBody.jpg') center;
+  background: url('./dashboardBody.jpg') center/cover;
   height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
 }
-
 .dashboardModal {
-
-  height: 90%;
-  background: #c0b8b8;
-  width: 90%;
+  height: 95%;
+  background: #ece8e8;
+  width: 95%;
   border-radius: 15px;
   display: flex;
 }
-
 .mainBoard {
   width: 100%;
-
 }
-.displayFlex{
+.rightTop{
   display: flex;
 }
 .userProfile {
@@ -38,42 +33,33 @@
   font-size: 1.3rem;
   padding: 10px 5px;
 }
-
 .mainBoardTop {
   height: 15%;
   border-radius: 25px 0 0 0;
-  background: rgb(199, 187, 187)
-}
-
-.userImage {
-  margin: 30px auto;
   
 }
-
+.userImage {
+  margin: 30px auto;
+}
 .userProfile .userImage img {
   width: 100px;
   height: 100px;
   border-radius: 100%;
   border: 7px solid #fff;
 }
-
 .icons{
- font-size: 2.5rem;
+ font-size: 2.3rem;
   cursor: pointer;
   margin: 0 auto;
 }
 .displayNone{
   display: none;
 }
-.displayTrue{
-  display: flex;
-}
 
 li {
   list-style: none;
   line-height: 1.5;
 }
-
 a {
   text-decoration: none;
 }
@@ -84,7 +70,6 @@ a:hover{
   color: #fff;
   font-size: 1.3rem;
 }
-
 .topWrapper {
   display: flex;
   justify-content: space-between;
@@ -93,19 +78,60 @@ a:hover{
   padding: 0 20px;
   background: url('./userProfileBackground.jpg');
 }
-
 .messaging {
   font-size: 1.6rem;
 }
-
 .btn{
   padding: 8px;
   border-radius: 10px;
   background: rgb(25, 159, 212);
-  font-size: 1.3rem;
+  
   border: 1px solid rgb(25, 159, 212);
   color: #fff;
   cursor: pointer;
   margin: 0 10px;
 
+}
+.mobileProfileImage, .mobileIcon, .mobileProfileStatus{
+  display: none;
+}
+
+@media screen and (max-width: 620px){
+  .rightTop{
+    display: none;
+  }
+  .messaging{
+    display: none;
+  }
+  .dashboardModal{
+    width: 100%;
+    height: 100%;
+    background: #f3f3f3;
+   
+  }
+  .mobileProfileImage{
+    width: 15%;
+    height: 80%;
+    display: flex;
+    
+  }
+  .mobileProfileImage img{
+    border-radius: 100%;
+  }
+  .topWrapper{
+    height: 100px;
+  }
+  .mobileIcon{
+    display: block;
+    color: rgb(25, 159, 212);
+    font-size: 1.5rem;
+    cursor: pointer;
+  }
+  .mobileProfileStatus{
+    display: block;
+    font-size: 1.5rem;
+    font-weight: bold;
+  }
+  
+  
 }
