changed button background color

--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body {
 
 .btn {
     display: inline-block;
-    background: rgba(21, 18, 223, 0.836);
+    background: #c5d5e8;
     color: #fff;
     padding: 0.4rem 1.3rem; 
     font-size:  1rem;
