--- a/landing.css
+++ b/landing.css
@@ -22,7 +22,7 @@ body {
 
 .btn {
     display: inline-block;
-    background: #c5d5e8;
+    background-color: #42a5f5;
     color: #fff;
     padding: 0.4rem 1.3rem; 
     font-size:  1rem;
