--- a/dashboard/public/scripts/index.css
+++ b/dashboard/public/scripts/index.css
@@ -55,16 +55,17 @@
     font-size: 1.3rem;
     text-decoration: none;
     margin: 0 20px;
-    color: grey;
-    border: 1px solid grey;
+    color: rgba(0, 0, 0, 0.993);
+    border: 1px solid rgba(0, 0, 0, 0.705);
     padding: 5px 10px;
     border-radius: 15px;
   }
 
   .searchArea a:hover {
-    background: #90b5fd;
+    background: #033292;
     color: #fff;
     border: none;
+    cursor: pointer;
   }
 
   .menu {
@@ -77,7 +78,7 @@
     padding: 15px;
     color: #fff;
     font-size: 2rem;
-    background: #90b5fd;
+    background: #033292;
     height: 80px;
   }
 
@@ -92,15 +93,15 @@
 
   .searchArea input {
     width: 22vw;
-    border-radius: 5px;
-    border: solid 1px #0002;
+    border-radius: 45px;
+    border: solid 1px rgba(0, 0, 0, 0.705);
     height: 3rem;
     padding: 15px;
   }
 }
 
 .contentArea {
-  background: #f4f4f4;
+  background: #e9e9e9;
   padding: 70px 20px;
 }
 
@@ -118,7 +119,7 @@ hr {
   display: none;
 }
 
-.groupOne {
+.group {
   display: flex;
   background: #fff;
   border-radius: 25px;
@@ -126,6 +127,11 @@ hr {
   margin: 20px 0;
   justify-content: space-between;
   align-items: center;
+}
+
+.group:hover {
+  cursor: pointer;
+  background: rgb(226, 223, 223);
 }
 
 .groupDetails {
@@ -137,6 +143,366 @@ hr {
   text-align: center;
   color: #7df77d;
   font-size: 2.2rem;
+}
+
+/* Osaze Additions */
+.chatSquare {
+  display: flex;
+  width: 100%;
+  height: 100vh
+}
+
+.chatInput {
+  position: absolute;
+  top : 70vh;
+  left: 30rem
+}
+
+#custom-search-input {
+  background: #e8e6e7 none repeat scroll 0 0;
+  margin: 0;
+  padding: 10px;
+}
+   #custom-search-input .search-query {
+   background: #fff none repeat scroll 0 0 !important;
+   border-radius: 4px;
+   height: 33px;
+   margin-bottom: 0;
+   padding-left: 7px;
+   padding-right: 7px;
+   }
+   #custom-search-input button {
+   background: rgba(0, 0, 0, 0) none repeat scroll 0 0;
+   border: 0 none;
+   border-radius: 3px;
+   color: #666666;
+   left: auto;
+   margin-bottom: 0;
+   margin-top: 7px;
+   padding: 2px 5px;
+   position: absolute;
+   right: 0;
+   z-index: 9999;
+   }
+   .search-query:focus + button {
+   z-index: 3;   
+   }
+
+   .all_conversation button {
+    background: #f5f3f3 none repeat scroll 0 0;
+    border: 1px solid #dddddd;
+    height: 38px;
+    text-align: left;
+    width: 100%;
+    }
+    .all_conversation i {
+    background: #e9e7e8 none repeat scroll 0 0;
+    border-radius: 100px;
+    color: #636363;
+    font-size: 17px;
+    height: 30px;
+    line-height: 30px;
+    text-align: center;
+    width: 30px;
+    }
+    .all_conversation .caret {
+    bottom: 0;
+    margin: auto;
+    position: absolute;
+    right: 15px;
+    top: 0;
+    }
+  
+   .all_conversation .dropdown-menu {
+   background: #f5f3f3 none repeat scroll 0 0;
+   border-radius: 0;
+   margin-top: 0;
+   padding: 0;
+   width: 100%;
+   }
+   .all_conversation ul li {
+   border-bottom: 1px solid #dddddd;
+   line-height: normal;
+   width: 100%;
+   }
+   .all_conversation ul li a:hover {
+   background: #dddddd none repeat scroll 0 0;
+   color:#333;
+   }
+   .all_conversation ul li a {
+  color: #333;
+  line-height: 30px;
+  padding: 3px 20px;
+}
+   .member_list .chat-body {
+   margin-left: 47px;
+   margin-top: 0;
+   }
+   .top_nav {
+   overflow: visible;
+   }
+   .member_list .contact_sec {
+   margin-top: 3px;
+   }
+   .member_list li {
+   padding: 6px;
+   }
+   .member_list ul {
+   border: 1px solid #dddddd;
+   }
+   .chat-img img {
+   height: 34px;
+   width: 34px;
+   }
+   .member_list li {
+   border-bottom: 1px solid #dddddd;
+   padding: 6px;
+   }
+   .member_list li:last-child {
+   border-bottom:none;
+   }
+   .member_list {
+   height: 380px;
+   overflow-x: hidden;
+   overflow-y: auto;
+   }
+   .sub_menu_ {
+  background: #e8e6e7 none repeat scroll 0 0;
+  left: 100%;
+  max-width: 233px;
+  position: absolute;
+  width: 100%;
+}
+.sub_menu_ {
+  background: #f5f3f3 none repeat scroll 0 0;
+  border: 1px solid rgba(0, 0, 0, 0.15);
+  display: none;
+  left: 100%;
+  margin-left: 0;
+  max-width: 233px;
+  position: absolute;
+  top: 0;
+  width: 100%;
+}
+.all_conversation ul li:hover .sub_menu_ {
+  display: block;
+}
+.new_message_head button {
+  background: rgba(0, 0, 0, 0) none repeat scroll 0 0;
+  border: medium none;
+}
+.new_message_head {
+  background: #f5f3f3 none repeat scroll 0 0;
+  float: left;
+  font-size: 13px;
+  font-weight: 600;
+  padding: 18px 10px;
+  width: 100%;
+}
+.message_section {
+  border: 1px solid #dddddd;
+}
+.chat_area {
+  float: left;
+  height: 300px;
+  overflow-x: hidden;
+  overflow-y: auto;
+  width: 100%;
+}
+.chat_area li {
+  padding: 14px 14px 0;
+}
+.chat_area li .chat-img1 img {
+  height: 40px;
+  width: 40px;
+}
+.chat_area .chat-body1 {
+  margin-left: 50px;
+}
+.chat-body1 p {
+  background: #fbf9fa none repeat scroll 0 0;
+  padding: 10px;
+}
+.chat_area .admin_chat .chat-body1 {
+  margin-left: 0;
+  margin-right: 50px;
+}
+.chat_area li:last-child {
+  padding-bottom: 10px;
+}
+.message_write {
+  background: #f5f3f3 none repeat scroll 0 0;
+  float: left;
+  padding: 15px;
+  width: 100%;
+}
+
+.message_write textarea.form-control {
+  height: 70px;
+  padding: 10px;
+}
+.chat_bottom {
+  float: left;
+  margin-top: 13px;
+  width: 100%;
+}
+.upload_btn {
+  color: #777777;
+}
+.sub_menu_ > li a, .sub_menu_ > li {
+  float: left;
+  width:100%;
+}
+.member_list li:hover {
+  background: #428bca none repeat scroll 0 0;
+  color: #fff;
+  cursor:pointer;
+}
+
+.all_conversation .dropdown-menu {
+  background: #f5f3f3 none repeat scroll 0 0;
+  border-radius: 0;
+  margin-top: 0;
+  padding: 0;
+  width: 100%;
+  }
+  .all_conversation ul li {
+  border-bottom: 1px solid #dddddd;
+  line-height: normal;
+  width: 100%;
+  }
+  .all_conversation ul li a:hover {
+  background: #dddddd none repeat scroll 0 0;
+  color:#333;
+  }
+  .all_conversation ul li a {
+ color: #333;
+ line-height: 30px;
+ padding: 3px 20px;
+}
+  .member_list .chat-body {
+  margin-left: 47px;
+  margin-top: 0;
+  }
+  .top_nav {
+  overflow: visible;
+  }
+  .member_list .contact_sec {
+  margin-top: 3px;
+  }
+  .member_list li {
+  padding: 6px;
+  }
+  .member_list ul {
+  border: 1px solid #dddddd;
+  }
+  .chat-img img {
+  height: 34px;
+  width: 34px;
+  }
+  .member_list li {
+  border-bottom: 1px solid #dddddd;
+  padding: 6px;
+  }
+  .member_list li:last-child {
+  border-bottom:none;
+  }
+  .member_list {
+  height: 380px;
+  overflow-x: hidden;
+  overflow-y: auto;
+  }
+  .sub_menu_ {
+ background: #e8e6e7 none repeat scroll 0 0;
+ left: 100%;
+ max-width: 233px;
+ position: absolute;
+ width: 100%;
+}
+.sub_menu_ {
+ background: #f5f3f3 none repeat scroll 0 0;
+ border: 1px solid rgba(0, 0, 0, 0.15);
+ display: none;
+ left: 100%;
+ margin-left: 0;
+ max-width: 233px;
+ position: absolute;
+ top: 0;
+ width: 100%;
+}
+.all_conversation ul li:hover .sub_menu_ {
+ display: block;
+}
+.new_message_head button {
+ background: rgba(0, 0, 0, 0) none repeat scroll 0 0;
+ border: medium none;
+}
+.new_message_head {
+ background: #f5f3f3 none repeat scroll 0 0;
+ float: left;
+ font-size: 13px;
+ font-weight: 600;
+ padding: 18px 10px;
+ width: 100%;
+}
+.message_section {
+ border: 1px solid #dddddd;
+}
+.chat_area {
+ float: left;
+ height: 300px;
+ overflow-x: hidden;
+ overflow-y: auto;
+ width: 100%;
+}
+.chat_area li {
+ padding: 14px 14px 0;
+}
+.chat_area li .chat-img1 img {
+ height: 40px;
+ width: 40px;
+}
+.chat_area .chat-body1 {
+ margin-left: 50px;
+}
+.chat-body1 p {
+ background: #fbf9fa none repeat scroll 0 0;
+ padding: 10px;
+}
+.chat_area .admin_chat .chat-body1 {
+ margin-left: 0;
+ margin-right: 50px;
+}
+.chat_area li:last-child {
+ padding-bottom: 10px;
+}
+.message_write {
+ background: #f5f3f3 none repeat scroll 0 0;
+ float: left;
+ padding: 15px;
+ width: 100%;
+}
+
+.message_write textarea.form-control {
+ height: 70px;
+ padding: 10px;
+}
+.chat_bottom {
+ float: left;
+ margin-top: 13px;
+ width: 100%;
+}
+.upload_btn {
+ color: #777777;
+}
+.sub_menu_ > li a, .sub_menu_ > li {
+ float: left;
+ width:100%;
+}
+.member_list li:hover {
+ background: #428bca none repeat scroll 0 0;
+ color: #fff;
+ cursor:pointer;
 }
 
 @media(max-device-width: 620px) {
@@ -196,7 +562,7 @@ hr {
   .searchArea input {
     width: 100%;
     border-radius: 25px;
-    border: solid 1px #0002;
+    border: solid 1px rgb(0, 0, 0);
     height: 3rem;
     padding: 15px;
   }
@@ -283,3 +649,17 @@ hr {
     border: solid 1px #f4f4f4;
   }
 }
+
+/* Osaze Additions */
+.chatSquare {
+  position: relative;
+  width: 100%;
+  height: 100vh
+}
+
+.chatInput {
+  position: absolute;
+  top : 70vh;
+  left: 30rem
+}
+
