--- a/dashboard/public/scripts/index.css
+++ b/dashboard/public/scripts/index.css
@@ -12,6 +12,9 @@
   .displayNone {
     display: none;
   }
+  .mobileNav{
+    display: none;
+  }
 
   .sideMenu {
     width: 10%;
@@ -47,25 +50,21 @@
     display: flex;
   }
 
-  .searchArea li {
-    list-style: none;
-  }
-
-  .searchArea a {
+  /* .butt {
     font-size: 1.3rem;
-    text-decoration: none;
     margin: 0 20px;
     color: grey;
-    border: 1px solid grey;
-    padding: 5px 10px;
+    border: none;
+    padding: 8px 15px;
     border-radius: 15px;
-  }
-
-  .searchArea a:hover {
+  } */
+/* 
+  .butt:hover {
     background: #90b5fd;
     color: #fff;
     border: none;
-  }
+    cursor: pointer;
+  } */
 
   .menu {
     margin: 0 20px;
@@ -77,7 +76,7 @@
     padding: 15px;
     color: #fff;
     font-size: 2rem;
-    background: #90b5fd;
+    background: #007bff;
     height: 80px;
   }
 
@@ -97,27 +96,17 @@
     height: 3rem;
     padding: 15px;
   }
-}
+
 
 .contentArea {
   background: #f4f4f4;
   padding: 70px 20px;
 }
-
-.nav {
-  display: none;
-}
-
 .groupImage img {
   width: 60px;
   height: 60px;
   border-radius: 100%;
 }
-
-hr {
-  display: none;
-}
-
 .groupOne {
   display: flex;
   background: #fff;
@@ -137,6 +126,68 @@ hr {
   text-align: center;
   color: #7df77d;
   font-size: 2.2rem;
+}
+.imaging img{
+  width: 150px;
+  height: 120px;
+  border-radius: 50%;
+  
+}
+
+/* Modal box */
+.hideModal {
+	position: absolute;
+	top: 0;
+	bottom: 0;
+  left: 0;
+  right: 0;
+  /* background: rgba(0,0,0,0.5); */
+	/* transition: opacity 200ms; */
+  visibility: hidden;
+  opacity: 0;
+  transition: all 500ms;
+}
+.showModal {
+  position: absolute;
+	top: 100px;
+	bottom: 0;
+  left: 0;
+  right: 0;
+  visibility: visible;
+  z-index: 20;
+  transition: all 500ms;
+ 
+}
+.popup {
+  z-index: 50;
+	margin: auto;
+	padding: 20px;
+	background: #fff;
+	border: 1px solid #666;
+	width: 70vw;
+	box-shadow: 0 0 50px rgba(0,0,0,0.5);
+	position: relative;}
+  .light .popup {
+    border-color: #aaa;
+    box-shadow: 0 2px 10px rgba(0,0,0,0.25);
+  }
+  .close {
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    top: 20px;
+    right: 20px;
+    opacity: 0.8;
+    
+    font-size: 24px;
+    font-weight: bold;
+    text-decoration: none;
+    color: #666;}
+    .close:hover {
+      opacity: 1;
+      cursor: pointer;
+    }
+/* End of Modal box */
 }
 
 @media(max-device-width: 620px) {
@@ -207,21 +258,21 @@ hr {
     padding: 0;
   }
 
-  .nav {
+  .mobileNav {
     display: block;
   }
 
-  .nav ul {
+  .mobileNav ul {
     display: flex;
     justify-content: space-around;
   }
 
-  .nav li {
+  .mobileNav li {
     list-style: none;
 
   }
 
-  .nav a {
+  .mobileNav a {
     color: #bbb;
     font-size: 1.3rem;
     text-decoration: none;
@@ -282,4 +333,58 @@ hr {
     display: block;
     border: solid 1px #f4f4f4;
   }
+  /* Modal box */
+.hideModal {
+	position: absolute;
+	top: 0;
+	bottom: 0;
+  left: 0;
+  right: 0;
+  /* background: rgba(0,0,0,0.5); */
+	/* transition: opacity 200ms; */
+  visibility: hidden;
+  opacity: 0;
+  transition: all 500ms;
+}
+.showModal {
+  position: absolute;
+	top: 100px;
+	bottom: 0;
+  left: 0;
+  right: 0;
+  visibility: visible;
+  z-index: 20;
+  transition: all 500ms;
+ 
+}
+.popup {
+  z-index: 50;
+	margin: auto;
+	padding: 20px;
+	background: #fff;
+	border: 1px solid #666;
+	width: 70vw;
+	box-shadow: 0 0 50px rgba(0,0,0,0.5);
+	position: relative;}
+  .light .popup {
+    border-color: #aaa;
+    box-shadow: 0 2px 10px rgba(0,0,0,0.25);
+  }
+  .close {
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    top: 20px;
+    right: 20px;
+    opacity: 0.8;
+    
+    font-size: 24px;
+    font-weight: bold;
+    text-decoration: none;
+    color: #666;}
+    .close:hover {
+      opacity: 1;
+      cursor: pointer;
+    }
+/* End of Modal box */
 }
