--- a/dashboard/public/scripts/index.css
+++ b/dashboard/public/scripts/index.css
@@ -158,351 +158,231 @@ hr {
   left: 30rem
 }
 
-#custom-search-input {
-  background: #e8e6e7 none repeat scroll 0 0;
+.main_section,html{
+  height: 100%;
   margin: 0;
-  padding: 10px;
+  background: #7F7FD5;
+  background: -webkit-linear-gradient(to right, #91EAE4, #86A8E7, #7F7FD5);
+  background: linear-gradient(to right, #91EAE4, #86A8E7, #7F7FD5);
 }
-   #custom-search-input .search-query {
-   background: #fff none repeat scroll 0 0 !important;
-   border-radius: 4px;
-   height: 33px;
-   margin-bottom: 0;
-   padding-left: 7px;
-   padding-right: 7px;
-   }
-   #custom-search-input button {
-   background: rgba(0, 0, 0, 0) none repeat scroll 0 0;
-   border: 0 none;
-   border-radius: 3px;
-   color: #666666;
-   left: auto;
-   margin-bottom: 0;
-   margin-top: 7px;
-   padding: 2px 5px;
-   position: absolute;
-   right: 0;
-   z-index: 9999;
-   }
-   .search-query:focus + button {
-   z-index: 3;   
-   }
 
-   .all_conversation button {
-    background: #f5f3f3 none repeat scroll 0 0;
-    border: 1px solid #dddddd;
-    height: 38px;
-    text-align: left;
-    width: 100%;
-    }
-    .all_conversation i {
-    background: #e9e7e8 none repeat scroll 0 0;
-    border-radius: 100px;
-    color: #636363;
-    font-size: 17px;
-    height: 30px;
-    line-height: 30px;
-    text-align: center;
-    width: 30px;
-    }
-    .all_conversation .caret {
-    bottom: 0;
-    margin: auto;
-    position: absolute;
-    right: 15px;
-    top: 0;
-    }
-  
-   .all_conversation .dropdown-menu {
-   background: #f5f3f3 none repeat scroll 0 0;
-   border-radius: 0;
-   margin-top: 0;
-   padding: 0;
-   width: 100%;
-   }
-   .all_conversation ul li {
-   border-bottom: 1px solid #dddddd;
-   line-height: normal;
-   width: 100%;
-   }
-   .all_conversation ul li a:hover {
-   background: #dddddd none repeat scroll 0 0;
-   color:#333;
-   }
-   .all_conversation ul li a {
-  color: #333;
-  line-height: 30px;
-  padding: 3px 20px;
+.chat{
+  margin-top: auto;
+  margin-bottom: auto;
 }
-   .member_list .chat-body {
-   margin-left: 47px;
-   margin-top: 0;
-   }
-   .top_nav {
-   overflow: visible;
-   }
-   .member_list .contact_sec {
-   margin-top: 3px;
-   }
-   .member_list li {
-   padding: 6px;
-   }
-   .member_list ul {
-   border: 1px solid #dddddd;
-   }
-   .chat-img img {
-   height: 34px;
-   width: 34px;
-   }
-   .member_list li {
-   border-bottom: 1px solid #dddddd;
-   padding: 6px;
-   }
-   .member_list li:last-child {
-   border-bottom:none;
-   }
-   .member_list {
-   height: 380px;
-   overflow-x: hidden;
-   overflow-y: auto;
-   }
-   .sub_menu_ {
-  background: #e8e6e7 none repeat scroll 0 0;
-  left: 100%;
-  max-width: 233px;
-  position: absolute;
-  width: 100%;
+.card{
+  height: 500px;
+  border-radius: 15px !important;
+  background-color: rgba(0,0,0,0.4) !important;
 }
-.sub_menu_ {
-  background: #f5f3f3 none repeat scroll 0 0;
-  border: 1px solid rgba(0, 0, 0, 0.15);
-  display: none;
-  left: 100%;
-  margin-left: 0;
-  max-width: 233px;
-  position: absolute;
-  top: 0;
-  width: 100%;
-}
-.all_conversation ul li:hover .sub_menu_ {
-  display: block;
-}
-.new_message_head button {
-  background: rgba(0, 0, 0, 0) none repeat scroll 0 0;
-  border: medium none;
-}
-.new_message_head {
-  background: #f5f3f3 none repeat scroll 0 0;
-  float: left;
-  font-size: 13px;
-  font-weight: 600;
-  padding: 18px 10px;
-  width: 100%;
-}
-.message_section {
-  border: 1px solid #dddddd;
-}
-.chat_area {
-  float: left;
-  height: 300px;
-  overflow-x: hidden;
+.contacts_body{
+  padding:  0.75rem 0 !important;
   overflow-y: auto;
-  width: 100%;
+  white-space: nowrap;
 }
-.chat_area li {
-  padding: 14px 14px 0;
+.msg_card_body{
+  overflow-y: auto;
 }
-.chat_area li .chat-img1 img {
+.card-header{
+  border-radius: 15px 15px 0 0 !important;
+  border-bottom: 0 !important;
+}
+.card-footer{
+border-radius: 0 0 15px 15px !important;
+  border-top: 0 !important;
+}
+.container{
+  align-content: center;
+}
+.search{
+  border-radius: 15px 0 0 15px !important;
+  background-color: rgba(0,0,0,0.3) !important;
+  border:0 !important;
+  color:white !important;
+}
+.search:focus{
+     box-shadow:none !important;
+       outline:0px !important;
+}
+.type_msg{
+  background-color: rgba(0,0,0,0.3) !important;
+  border:0 !important;
+  color:white !important;
+  height: 60px !important;
+  overflow-y: auto;
+}
+.type_msg:focus{
+  box-shadow:none !important;
+  outline:0px !important;
+}
+.attach_btn{
+border-radius: 15px 0 0 15px !important;
+background-color: rgba(0,0,0,0.3) !important;
+  border:0 !important;
+  color: white !important;
+  cursor: pointer;
+}
+.send_btn{
+border-radius: 0 15px 15px 0 !important;
+background-color: rgba(0,0,0,0.3) !important;
+  border:0 !important;
+  color: white !important;
+  cursor: pointer;
+}
+.search_btn{
+  border-radius: 0 15px 15px 0 !important;
+  background-color: rgba(0,0,0,0.3) !important;
+  border:0 !important;
+  color: white !important;
+  cursor: pointer;
+}
+.contacts{
+  list-style: none;
+  padding: 0;
+}
+.contacts li{
+  width: 100% !important;
+  padding: 5px 10px;
+  margin-bottom: 15px !important;
+}
+.active{
+  background-color: rgba(0,0,0,0.3);
+}
+.user_img{
+  height: 70px;
+  width: 70px;
+  border:1.5px solid #f5f6fa;
+
+}
+.user_img_msg{
+  height: 40px;
+  width: 40px;
+  border:1.5px solid #f5f6fa;
+
+}
+.img_cont{
+  position: relative;
+  height: 70px;
+  width: 70px;
+}
+.img_cont_msg{
   height: 40px;
   width: 40px;
 }
-.chat_area .chat-body1 {
-  margin-left: 50px;
+.online_icon{
+position: absolute;
+height: 15px;
+width:15px;
+background-color: #4cd137;
+border-radius: 50%;
+bottom: 0.2em;
+right: 0.4em;
+border:1.5px solid white;
 }
-.chat-body1 p {
-  background: #fbf9fa none repeat scroll 0 0;
-  padding: 10px;
+.offline{
+background-color: #c23616 !important;
 }
-.chat_area .admin_chat .chat-body1 {
-  margin-left: 0;
-  margin-right: 50px;
+.user_info{
+margin-top: auto;
+margin-bottom: auto;
+margin-left: 15px;
 }
-.chat_area li:last-child {
-  padding-bottom: 10px;
+.user_info span{
+font-size: 20px;
+color: white;
 }
-.message_write {
-  background: #f5f3f3 none repeat scroll 0 0;
-  float: left;
-  padding: 15px;
-  width: 100%;
+.user_info p{
+font-size: 10px;
+color: rgba(255,255,255,0.6);
 }
+.video_cam{
+margin-left: 50px;
+margin-top: 5px;
+}
+.video_cam span{
+color: white;
+font-size: 20px;
+cursor: pointer;
+margin-right: 20px;
+}
+.msg_cotainer{
+margin-top: auto;
+margin-bottom: auto;
+margin-left: 10px;
+border-radius: 25px;
+background-color: #82ccdd;
+padding: 10px;
+position: relative;
+}
+.msg_cotainer_send{
+margin-top: auto;
+margin-bottom: auto;
+margin-right: 10px;
+border-radius: 25px;
+background-color: #78e08f;
+padding: 10px;
+position: relative;
+}
+.msg_time{
+position: absolute;
+left: 0;
+bottom: -15px;
+color: rgba(255,255,255,0.5);
+font-size: 10px;
+}
+.msg_time_send{
+position: absolute;
+top: 45px;
+right:0;
+bottom: -15px;
+width: 70px;
+color: rgba(255,255,255,0.5);
+font-size: 10px;
+}
+.msg_head{
+position: relative;
+}
+#action_menu_btn{
+position: absolute;
+right: 10px;
+top: 10px;
+color: white;
+cursor: pointer;
+font-size: 20px;
+}
+.action_menu{
+z-index: 1;
+position: absolute;
+padding: 15px 0;
+background-color: rgba(0,0,0,0.5);
+color: white;
+border-radius: 15px;
+top: 30px;
+right: 15px;
+display: none;
+}
+.action_menu ul{
+list-style: none;
+padding: 0;
+margin: 0;
+}
+.action_menu ul li{
+width: 100%;
+padding: 10px 15px;
+margin-bottom: 5px;
+}
+.action_menu ul li i{
+padding-right: 10px;
 
-.message_write textarea.form-control {
-  height: 70px;
-  padding: 10px;
 }
-.chat_bottom {
-  float: left;
-  margin-top: 13px;
-  width: 100%;
+.action_menu ul li:hover{
+cursor: pointer;
+background-color: rgba(0,0,0,0.2);
 }
-.upload_btn {
-  color: #777777;
+@media(max-width: 576px){
+.contacts_card{
+margin-bottom: 15px !important;
 }
-.sub_menu_ > li a, .sub_menu_ > li {
-  float: left;
-  width:100%;
-}
-.member_list li:hover {
-  background: #428bca none repeat scroll 0 0;
-  color: #fff;
-  cursor:pointer;
-}
-
-.all_conversation .dropdown-menu {
-  background: #f5f3f3 none repeat scroll 0 0;
-  border-radius: 0;
-  margin-top: 0;
-  padding: 0;
-  width: 100%;
-  }
-  .all_conversation ul li {
-  border-bottom: 1px solid #dddddd;
-  line-height: normal;
-  width: 100%;
-  }
-  .all_conversation ul li a:hover {
-  background: #dddddd none repeat scroll 0 0;
-  color:#333;
-  }
-  .all_conversation ul li a {
- color: #333;
- line-height: 30px;
- padding: 3px 20px;
-}
-  .member_list .chat-body {
-  margin-left: 47px;
-  margin-top: 0;
-  }
-  .top_nav {
-  overflow: visible;
-  }
-  .member_list .contact_sec {
-  margin-top: 3px;
-  }
-  .member_list li {
-  padding: 6px;
-  }
-  .member_list ul {
-  border: 1px solid #dddddd;
-  }
-  .chat-img img {
-  height: 34px;
-  width: 34px;
-  }
-  .member_list li {
-  border-bottom: 1px solid #dddddd;
-  padding: 6px;
-  }
-  .member_list li:last-child {
-  border-bottom:none;
-  }
-  .member_list {
-  height: 380px;
-  overflow-x: hidden;
-  overflow-y: auto;
-  }
-  .sub_menu_ {
- background: #e8e6e7 none repeat scroll 0 0;
- left: 100%;
- max-width: 233px;
- position: absolute;
- width: 100%;
-}
-.sub_menu_ {
- background: #f5f3f3 none repeat scroll 0 0;
- border: 1px solid rgba(0, 0, 0, 0.15);
- display: none;
- left: 100%;
- margin-left: 0;
- max-width: 233px;
- position: absolute;
- top: 0;
- width: 100%;
-}
-.all_conversation ul li:hover .sub_menu_ {
- display: block;
-}
-.new_message_head button {
- background: rgba(0, 0, 0, 0) none repeat scroll 0 0;
- border: medium none;
-}
-.new_message_head {
- background: #f5f3f3 none repeat scroll 0 0;
- float: left;
- font-size: 13px;
- font-weight: 600;
- padding: 18px 10px;
- width: 100%;
-}
-.message_section {
- border: 1px solid #dddddd;
-}
-.chat_area {
- float: left;
- height: 300px;
- overflow-x: hidden;
- overflow-y: auto;
- width: 100%;
-}
-.chat_area li {
- padding: 14px 14px 0;
-}
-.chat_area li .chat-img1 img {
- height: 40px;
- width: 40px;
-}
-.chat_area .chat-body1 {
- margin-left: 50px;
-}
-.chat-body1 p {
- background: #fbf9fa none repeat scroll 0 0;
- padding: 10px;
-}
-.chat_area .admin_chat .chat-body1 {
- margin-left: 0;
- margin-right: 50px;
-}
-.chat_area li:last-child {
- padding-bottom: 10px;
-}
-.message_write {
- background: #f5f3f3 none repeat scroll 0 0;
- float: left;
- padding: 15px;
- width: 100%;
-}
-
-.message_write textarea.form-control {
- height: 70px;
- padding: 10px;
-}
-.chat_bottom {
- float: left;
- margin-top: 13px;
- width: 100%;
-}
-.upload_btn {
- color: #777777;
-}
-.sub_menu_ > li a, .sub_menu_ > li {
- float: left;
- width:100%;
-}
-.member_list li:hover {
- background: #428bca none repeat scroll 0 0;
- color: #fff;
- cursor:pointer;
 }
 
 @media(max-device-width: 620px) {
