--- a/dashboard/public/scripts/index.css
+++ b/dashboard/public/scripts/index.css
@@ -289,7 +289,10 @@ margin-left: 15px;
 }
 .user_info span{
 font-size: 20px;
-color: white;
+color: rgb(255, 255, 255);
+}
+.new_member_info span, .new_member_info p{
+  color: black;
 }
 .user_info p{
 font-size: 10px;
@@ -344,8 +347,8 @@ position: relative;
 }
 #action_menu_btn{
 position: absolute;
-right: 10px;
-top: 10px;
+right: 20px;
+top: 14px;
 color: white;
 cursor: pointer;
 font-size: 20px;
@@ -366,16 +369,16 @@ list-style: none;
 padding: 0;
 margin: 0;
 }
-.action_menu ul li{
+.action_menu a{
 width: 100%;
 padding: 10px 15px;
 margin-bottom: 5px;
 }
-.action_menu ul li i{
+.action_menu a i{
 padding-right: 10px;
 
 }
-.action_menu ul li:hover{
+.action_menu a:hover{
 cursor: pointer;
 background-color: rgba(0,0,0,0.2);
 }
