--- a/dashboard/public/scripts/index.css
+++ b/dashboard/public/scripts/index.css
@@ -20,7 +20,7 @@ body {
   -webkit-font-smoothing: antialiased;
   color: #fff;
   height: auto;
-  width: 100%
+  width: 100%;
 }
 
 .btnLanding {
@@ -463,8 +463,9 @@ body {
   left: 30rem
 }
 
-.main_section,html{
-  height: 100%;
+.main_section, html{
+  height: 80vh;
+  width: 100%;
   margin: 0;
   background: #7F7FD5;
   background: -webkit-linear-gradient(to right, #91EAE4, #86A8E7, #7F7FD5);
@@ -647,8 +648,8 @@ position: absolute;
 top: 45px;
 right:0;
 bottom: -15px;
-width: 70px;
-color: rgba(255,255,255,0.5);
+width: 90px;
+color: rgba(255, 255, 255, 0.801);
 font-size: 10px;
 }
 .msg_head{
@@ -691,6 +692,10 @@ padding-right: 10px;
 cursor: pointer;
 background-color: rgba(0,0,0,0.2);
 }
+
+.contacts_card{
+  margin: 15px 0 !important;
+  }
 
 @media(max-width: 576px){
   .contacts_card{
@@ -798,10 +803,11 @@ background-color: rgba(0,0,0,0.2);
   }
 
   .groupChats {
-
     padding: 20px;
     margin: 20px 0;
-
+    background: #7F7FD5;
+    background: -webkit-linear-gradient(to right, #91EAE4, #86A8E7, #7F7FD5);
+    background: linear-gradient(to right, #91EAE4, #86A8E7, #7F7FD5);
   }
 
   .groupOne {
